--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Inventory Manager"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
